--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* 
     This is a CSS comment. Please add your name to this file below:
     
-    NAME: 
+    NAME: Audrey Olson
 */
 /* -------------------------------------------------- */
 /* 
@@ -334,6 +334,16 @@ footer{
         - add the large box shadow
 */
 /* ADD SELECTOR AND STYLES HERE */
+#section2 a {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: bold;
+    width: 50%;
+    box-shadow: var(--box-shadow-lg);
+    margin: 1rem auto; /* optional to center block horizontally */
+}
 
 /* For the first link in this section: */
 #section2 a:first-of-type{
@@ -376,8 +386,11 @@ footer{
             - bottom: 16px
             - left: 60px
 */
-#section2 div > p:last-of-type{
-    
+#section2 div > p:last-of-type {
+    background-color: rgb(67 101 115 / 50%); /* teal in RGBA */
+    border: 4px dashed rgb(13 13 13 / 50%);
+    margin: 16px 60px 32px 8px;   /* top right bottom left */
+    padding: 32px 8px 16px 60px;  /* top right bottom left */
 }
 
  /* For the div wrapped around that paragraph to show the space its taking up within its container */
@@ -393,9 +406,13 @@ footer{
         - change the color of the border to the lt-blue color
         - add the small box shadow, using the variable in the root
 */
-#section2 a:first-of-type:hover{
-
+#section2 a:first-of-type:hover {
+    background-color: var(--dk-blue);
+    color: white;
+    border-color: var(--lt-blue);
+    box-shadow: var(--small-box-shadow);
 }
+
 
 #section2 a:last-of-type:hover{
     background-color: var(--lt-blue);
@@ -417,8 +434,12 @@ footer{
         - add margin to center this element
         - add the small filter drop shadow from the CSS variables in the root
 */
-#section3 img{
-    
+#section3 img {
+    display: block;
+    width: 200px;
+    height: auto;
+    margin: 0 auto;
+    filter: var(--small-drop-shadow);
 }
 
 #section3 div::before{
@@ -459,7 +480,17 @@ footer{
         - move this up from its original location by 50px
         - move this to the right from its original location by 25px
 */
-#section3 div::after{
+#section3 div::after {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: var(--lt-blue);
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    top: -50px;
+    left: 25px;
 }
 
 
@@ -480,8 +511,8 @@ footer{
             - bottom: 1rem
             - left: 0
 */
-#section4 p:last-of-type{
-
+#section4 p:last-of-type {
+    margin: 1rem 0 1rem 0; /* top right bottom left */
 }
 
 /* ------------- SECTION 5 STYLES ---------------- */
@@ -517,8 +548,11 @@ footer{
         - center the image pattern in the container
         - add the puppy-photo as a repeating background to the container
 */
-#bg-img-3{
-    
+#bg-img-3 {
+    background-color: var(--lt-blue);
+    background-image: url("puppy-photo.jpg");
+    background-repeat: repeat;
+    background-position: center;
 }
 
 /* For the fourth div, let's style this like the second div, but let's change the height of the div to 100px, so it fits the height of the image. It will make it look like the image and div are the same height */
@@ -544,8 +578,10 @@ footer{
         - scale the background image to 110% 
         - add the wood background texture from the images folder
 */
-#pattern1{
-    
+#pattern1 {
+    background-color: var(--lt-gray);
+    background-image: url("images/wood.png");
+    background-size: 110%;
 }
 
 /* For the second div, the pattern is from from Hero Pattern. These actually give you SVG code to paste into your CSS */
@@ -601,8 +637,8 @@ footer{
     TO DO: add styles to the image with an ID of dog-house in this section that will:
         - float the image to the right
 */
-#dog-house{
-    
+#dog-house {
+    float: right;
 }
 
 /* When you use floats, you have to be sure to clear them so that the rest of your page after the floats displays normally. Let's use the display section to clear the floats (because it is the next tag outside of our container in the HTML) */
@@ -610,8 +646,8 @@ footer{
     TO DO: add styles to the display section that will:
         - clear any floats
 */
-#section9{
-    
+#section9 {
+    clear: both;
 }
 
 /* ------------- SECTION 9 STYLES ---------------- */
